# QuickView

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  SPEC.md  deny.toml
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adrs/: ADR-0001-Language-and-Build.md  ADR-0002-UI-Toolkit.md  ADR-0003-Layer-Shell.md  ADR-0004-Image-Decoding.md  ADR-0005-OCR-Engine.md  ADR-0006-OCR-Output-Format.md  ADR-0007-Clipboard.md  ADR-0008-File-Manager-Integration.md  ADR-0009-Caching.md  ADR-0010-Threading-Model.md
assets/desktop/: com.example.QuickView.desktop  io.github.Green2Grey2.QuickView.desktop
assets/metainfo/: com.example.QuickView.metainfo.xml  io.github.Green2Grey2.QuickView.metainfo.xml
crates/quickview/: Cargo.toml
crates/quickview-core/: Cargo.toml
crates/quickview-core/src/: cache.rs  config.rs  fs.rs  geometry.rs  lib.rs
crates/quickview-core/src/ocr/: downscale.rs  index.rs  mod.rs  models.rs  select.rs  tesseract.rs  tsv.rs
crates/quickview-ui/: Cargo.toml
crates/quickview-ui/src/: decode.rs  ipc.rs  lib.rs  ocr_prep.rs
crates/quickview-ui/src/widgets/: image_overlay.rs  mod.rs
crates/quickview-ui/src/windows/: full_viewer.rs  mod.rs  quick_preview.rs  shared.rs
crates/quickview/src/: main.rs
diagrams/: architecture.mmd  state_machine.mmd
docs/: ARCHITECTURE.md  DECISIONS.md  DEPENDENCIES.md  DEVELOPMENT.md  INTEGRATION.md  PHASED_PLAN.md  REFERENCES.md  SPEC_SHEET.md
packaging/appimage/: README.md
packaging/arch/: PKGBUILD
packaging/flatpak/: com.example.QuickView.json  io.github.Green2Grey2.QuickView.json
scripts/: bootstrap_arch.sh
templates/: PKGBUILD.stub  config.example.toml  flatpak-manifest.stub.json  keybind-examples.md  quickview.desktop
