[package]
name = "quickview-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true

csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
blake3 = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

