[package]
name = "quickview-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true

quickview-core = { path = "../quickview-core" }

gtk4 = { version = "0.10", package = "gtk4", features = ["v4_10"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_4"] }

gtk4-layer-shell = "0.7"
glib = "0.21"
async-channel = "2"

# Sandboxed image decoding. Always compiled (pure Rust client, no system build
# deps); whether it is used is decided at runtime by probing installed loaders.
glycin = { version = "3", features = ["gdk4"] }
